new design for the page, homebrew part updated

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -5,14 +5,16 @@ home-bg.jpg: home-bg-27003c326252b9d48386d35c52f5581d.jpg
 home-bg/index.jpg: home-bg-27003c326252b9d48386d35c52f5581d.jpg
 irails.png: irails-07d4157af160b9f67192f56b0d21b2a9.png
 irails/index.png: irails-07d4157af160b9f67192f56b0d21b2a9.png
+logo.png: logo-f5485df20672f0efbcc286241f60ddcc.png
+logo/index.png: logo-f5485df20672f0efbcc286241f60ddcc.png
 rails.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
 rails/index.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
 win.png: win-902fe2ea7bfd718d041e0f1b53477d60.png
 win/index.png: win-902fe2ea7bfd718d041e0f1b53477d60.png
 application.js: application-2a4459ba21fae1f7572c3bbd0ce067da.js
 application/index.js: application-2a4459ba21fae1f7572c3bbd0ce067da.js
-application.css: application-1b13569e9620782f423d4cd3ce931750.css
-application/index.css: application-1b13569e9620782f423d4cd3ce931750.css
+application.css: application-fe0b992dd5fc3015081353373a700598.css
+application/index.css: application-fe0b992dd5fc3015081353373a700598.css
 jquery-ui/animated-overlay.gif: jquery-ui/animated-overlay-602eee4c79a4796b02bb6442948c9e28.gif
 jquery-ui/animated-overlay/index.gif: jquery-ui/animated-overlay-602eee4c79a4796b02bb6442948c9e28.gif
 jquery-ui/ui-bg_flat_0_aaaaaa_40x100.png: jquery-ui/ui-bg_flat_0_aaaaaa_40x100-7d1197a52442bc56fcad60d0390f4b32.png
